# code-evolution

./: .gitignore  README.md
Ai/deep_learning_scratch/: ganzhiji.py  matplotlib_base.py  n_dim_calc.py  numpy_base.py
Ai/deep_learning_scratch/ch03/: activate_func.py  mnist.py  neuralnet_mnist.py
Ai/deep_learning_scratch/ch04/: gradient.py  mini-batch.py  nw_gradient.py  train_neuralnet.py  two_layer_net.py
Ai/deep_learning_scratch/ch05/: buy_apple.py  gradient_check.py  layer_naive.py  relu.py  sigmoid.py  softmax_with_loss.py  train_neuralnet.py  two_layer_net.py
Ai/deep_learning_scratch/ch06/: adagrad.py  adam.py  momentum.py  rmsprop.py
Ai/deep_learning_scratch/common/: functions.py  gradient.py  layers.py
Ai/deep_learning_scratch/dataset/: mnist.py
Backend/Algorithm/: 1.wealth_experiment.py
Backend/Algorithm/Should Master/: 1.deque.py  2.heap.py  3.fibonacci.py  4.exchange.py
Backend/Algorithm/algo_interview/ch21/: 2.stairs_min_cost.py  3.diff_path.py  fib.py
Backend/Algorithm/zcy_book/ch5/: 2.matrix_step.py  3.coins_min_count.py  4.robot_walk.py
Backend/Python/: .gitignore  opt_sync_2.py  pyproject.toml  sync.py  test_opt_sync.py
Backend/Python/ch3/: opt_sync_1.py  test_opt_sync_1.py  test_opt_sync_2.py  test_sync.py
Backend/Python/ch4/: fastapi_app.py  flask_app.py  orm.py  repository.py  services.py  test_api.py
Backend/Template/Python/v1/: .gitignore  .readthedocs.yaml  Makefile  README.md  pyproject.toml
Backend/Template/Python/v1/docs/: Makefile  conf.py  getting_started.rst  index.rst  tutorial.rst
(+9 files in other folders)
