[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.122.0",
    "flask>=3.1.2",
    "pytest>=9.0.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
